# cuda_experiments

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/: common.cmake
core/: CMakeLists.txt
core/include/: cube_lut.hpp  memory_layout_overhead_core.hpp  tetrahedral_interpolation_core.hpp  variant.hpp
core/src/: memory_layout_overhead_core.cpp  tetrahedral_interpolation_core.cpp
cuda/: CMakeLists.txt
cuda/include/: memory_layout_overhead_cuda.hpp  tetrahedral_interpolation_cuda.hpp
cuda/kernels/: CMakeLists.txt
cuda/kernels/src/: apply_lut3D.cu  texture_readback.cu
cuda/src/: cuda_helpers.hpp  memory_layout_overhead_cuda.cpp  tetrahedral_interpolation_cuda.cpp
include/: helper_cuda.hpp  helper_string.hpp
src/: main.cpp
tests/: CMakeLists.txt
tests/cuda_tests/: CMakeLists.txt
tests/cuda_tests/include/: 10bit.cuh  16bit.cuh  8bit.cuh  common.cuh  conversions.cuh  uyvy.cuh  yuv.cuh
tests/cuda_tests/src/: main.cu
tests/cupti_tests/: CMakeLists.txt
tests/cupti_tests/src/: main.cu
tests/include/: 10bit.cuh  16bit.cuh  8bit.cuh  common.cuh
tests/ram_gpuram_tests/: CMakeLists.txt
tests/ram_gpuram_tests/src/: main.cu
tests/src/: main.cu
